# CAG

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: test_tokens.txt
scripts/: download_and_patch_transformers.sh  transformers-v4.11.3-x.patch
src/: action_dict.py  beam_search.py  data.py  estimate_word_ppl.py  lm_zoo_spec.py  models.py  preprocess.py  train.py  utils.py  warmup_scheduler.py
src/tests/: test_action_dict.py  test_models.py  test_utils.py
