[tool.poetry]
name = "transformer-grammar"
version = "0.1.0"
description = ""
authors = ["yoshiryo0617 <yoshiryo0617@g.ecc.u-tokyo.ac.jp>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
torch = "^1.9.0"
nltk = "^3.6.2"
sentencepiece = "^0.1.96"
accelerate = "^0.5.1"
tensorboard = "2.5.0"
setuptools = "58.2.0"
protobuf = ">=3.20.0,<3.21.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
isort = "^5.9.3"
black = "^21.9b0"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.black]
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
